--- a/less/index.less
+++ b/less/index.less
@@ -24,11 +24,17 @@ body {
     }
 }
 
-//购物车下拉菜单栏
+//购物车下拉样式
 .cart_det_change {
     height: 100px !important;
     transition: all 0.5s;
 
+}
+
+//下载app下拉样式
+.download_change {
+    height: 148px !important;
+    transition: all 0.5s;
 }
 
 //头部样式
@@ -38,7 +44,7 @@ body {
     background-color: #333;
 
     .top {
-
+        position: relative;
         width: 1226px;
         height: 100%;
 
@@ -54,15 +60,53 @@ body {
             line-height: 40px;
 
             ul {
+                position: relative;
                 height: 100%;
                 display: flex;
                 justify-content: space-between;
             }
 
             li {
+                
+
                 a {
                     color: #b0b0b0;
                     font-size: 12px;
+                }
+
+                .download {
+                    position: absolute;
+                    height: 40px;
+                    width: 100%;
+                    top: 40px;
+                    left: 75%;
+                    .download_content {
+                        position: absolute;
+                        width: 124px;
+                        height: 0;
+                        text-align: center;
+                        font-size: 14px;
+                        color: #333;
+                        background-color: #fff;
+                        overflow: hidden;
+                        z-index: 11;
+
+                        img {
+                            width: 90px;
+                            height: 90px;
+                            margin: 18px 17px 12px 17px;
+                            vertical-align: middle;
+                        }
+
+                        p {
+                            position: absolute;
+                            top: 120px;
+                            width: 100%;
+                            height: 16px;
+                            line-height: 16px;
+                            text-align: center;
+                        }
+                    }
                 }
             }
         }
@@ -86,6 +130,7 @@ body {
                     a {
                         color: #b0b0b0;
                         font-size: 12px;
+
                     }
                 }
 
@@ -105,7 +150,28 @@ body {
                         font-weight: 800;
                         line-height: 40px;
 
-                        span {
+                        .cart_detail {
+                            position: absolute;
+                            right: 0;
+                            margin: 0;
+
+                            .content {
+                                position: absolute;
+                                top: 40px;
+                                right: 0;
+                                background-color: #fff;
+                                width: 316px;
+                                height: 0;
+                                margin: 0;
+                                text-align: center;
+                                line-height: 100px;
+                                font-size: 12px;
+                                color: #424242;
+                                overflow: hidden;
+                            }
+                        }
+
+                        .cart_text {
                             position: relative;
                             top: -2px;
                             font-size: 12px;
@@ -122,25 +188,9 @@ body {
         }
     }
 
-    .cart_detail {
-        position: relative;
-        width: 1226px;
-        height: 40px;
 
-        .content {
-            position: absolute;
-            top: 0;
-            right: 0;
-            background-color: #fff;
-            width: 316px;
-            height: 0;
-            text-align: center;
-            line-height: 100px;
-            font-size: 12px;
-            color: #424242;
 
-        }
-    }
+
 }
 
 //主体头部样式
