--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,38 @@ body {
   width: 992px !important;
   box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.2);
 }
+.bannerhide_area {
+  position: absolute;
+  top: -20px;
+  left: 234px;
+  width: 0;
+  height: 460px;
+  overflow: hidden;
+  background-color: #fff;
+}
+.bannerhide_area ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+.bannerhide_area ul li {
+  width: 25%;
+  height: 76.666px !important;
+  line-height: 76.66px;
+  padding-left: 0!important;
+}
+.bannerhide_area ul li a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  line-height: 76.66px;
+  color: #333 !important;
+}
+.bannerhide_area ul li a img {
+  margin-left: 20px;
+  vertical-align: middle;
+}
 .header {
   width: 100%;
   height: 40px;
@@ -263,39 +295,6 @@ body {
 .banner_area .left li a span {
   position: absolute;
   right: 20px;
-}
-.banner_area .left li a .phone_area {
-  position: absolute;
-  top: -20px;
-  left: 234px;
-  width: 0;
-  height: 460px;
-  overflow: hidden;
-  z-index: 99;
-  background-color: #fff;
-}
-.banner_area .left li a .phone_area ul {
-  display: flex;
-  flex-wrap: wrap;
-}
-.banner_area .left li a .phone_area ul li {
-  width: 25%;
-  height: 76.666px;
-  line-height: 76.66px;
-}
-.banner_area .left li a .phone_area ul li a {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  line-height: 76.66px;
-  color: #333;
-}
-.banner_area .left li a .phone_area ul li a img {
-  margin-left: 20px;
-  vertical-align: middle;
-}
-.banner_area .left li a .phone_area ul li a span {
-  height: 40px;
 }
 .banner_area .right .swiper-container {
   position: relative;
