--- a/less/index.less
+++ b/less/index.less
@@ -42,6 +42,7 @@ body {
     width: 992px !important;
     box-shadow: 0px 10px 25px rgba(0, 0, 0, .2);
 }
+
 //轮播图区域导航弹出样式
 .bannerhide_area {
     position: absolute;
@@ -49,24 +50,28 @@ body {
     left: 234px;
     width: 0;
     height: 460px;
-    overflow: hidden; 
+    overflow: hidden;
     background-color: #fff;
+
     ul {
         display: flex;
         flex-wrap: wrap;
         width: 100%;
         height: 100%;
+
         li {
             width: 25%;
-            height: 76.666px!important;
+            height: 76.666px !important;
             line-height: 76.66px;
-            padding-left: 0!important;
+            padding-left: 0 !important;
+
             a {
                 display: inline-block;
                 width: 100%;
                 height: 100%;
                 line-height: 76.66px;
-                color: #333!important;
+                color: #333 !important;
+
                 img {
                     margin-left: 20px;
                     vertical-align: middle;
@@ -317,14 +322,17 @@ body {
         height: 460px;
         background-color: rgba(105, 101, 101, .6);
         z-index: 2;
+
         &>ul>li:hover {
-                background-color: #ff6700;
-            }
+            background-color: #ff6700;
+        }
+
         li {
             position: relative;
             height: 42px;
             line-height: 42px;
             padding-left: 30px;
+
             a {
                 color: #fff;
                 font-size: 14px;
@@ -334,15 +342,16 @@ body {
                     right: 20px;
                 }
 
-                
+
             }
         }
     }
 
     .right {
 
+        position: relative;
 
-        .swiper-container {
+        .swiper {
             position: relative;
             top: 0;
             left: 0;
@@ -353,15 +362,24 @@ body {
                 position: absolute;
                 left: 244px;
             }
+
+            .swiper-pagination {
+                position: absolute;
+                width: 400px;
+                left: auto;
+                right: 30px;
+                bottom: 20px;
+                .swiper-pagination-bullet{
+                    width: 10px;
+                    height: 10px;
+                    border: 2px solid rgba(0,0,0, 0.4);
+                    background: hsla(0, 0%, 100%, .4);
+
+                }
+            }
         }
 
-        .swiper-pagination {
-            position: absolute;
-            width: 400px;
-            left: auto;
-            right: 30px;
-            bottom: 20px;
-        }
+
 
 
 
